# Generated by Django 4.1 on 2023-06-22 11:51

from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ("confApp", "0001_initial"),
    ]

    operations = [
        migrations.CreateModel(
            name="Adress",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("name", models.CharField(blank=True, max_length=255, null=True)),
            ],
            options={
                "db_table": "adress",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Child",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("first_name", models.CharField(blank=True, max_length=255, null=True)),
                ("last_name", models.CharField(blank=True, max_length=255, null=True)),
                ("dni", models.CharField(blank=True, max_length=255, null=True)),
                ("birthdate", models.DateField(blank=True, null=True)),
                ("registration_date", models.DateField(blank=True, null=True)),
                ("disenroll_date", models.DateField(blank=True, null=True)),
            ],
            options={
                "db_table": "child",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="ChildState",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("name", models.CharField(blank=True, max_length=255, null=True)),
            ],
            options={
                "db_table": "child_state",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Company",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("title", models.CharField(blank=True, max_length=255, null=True)),
                ("phone", models.IntegerField(blank=True, null=True)),
            ],
            options={
                "db_table": "company",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Cribroom",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("max_capacity", models.IntegerField(blank=True, null=True)),
            ],
            options={
                "db_table": "cribroom",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="CribroomUser",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
            ],
            options={
                "db_table": "cribroom_user",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Desinfection",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("date", models.DateTimeField(blank=True, null=True)),
                (
                    "description",
                    models.CharField(blank=True, max_length=255, null=True),
                ),
            ],
            options={
                "db_table": "desinfection",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Form",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("generation_date", models.DateField(blank=True, null=True)),
            ],
            options={
                "db_table": "form",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Gender",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("name", models.CharField(blank=True, max_length=255, null=True)),
            ],
            options={
                "db_table": "gender",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Guardian",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("first_name", models.CharField(blank=True, max_length=255, null=True)),
                ("last_name", models.CharField(blank=True, max_length=255, null=True)),
                ("dni", models.CharField(blank=True, max_length=255, null=True)),
                ("birthdate", models.DateField(blank=True, null=True)),
            ],
            options={
                "db_table": "guardian",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="GuardianPhone",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("phone", models.CharField(blank=True, max_length=255, null=True)),
            ],
            options={
                "db_table": "guardian_phone",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Payout",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("amount", models.FloatField(blank=True, null=True)),
                ("date", models.DateField(blank=True, null=True)),
            ],
            options={
                "db_table": "payout",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Role",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("name", models.CharField(blank=True, max_length=255, null=True)),
            ],
            options={
                "db_table": "role",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Shift",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("name", models.CharField(blank=True, max_length=255, null=True)),
            ],
            options={
                "db_table": "shift",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="User",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("username", models.CharField(blank=True, max_length=255, null=True)),
                ("password", models.CharField(blank=True, max_length=255, null=True)),
            ],
            options={
                "db_table": "user",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="UserEmail",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("email", models.CharField(blank=True, max_length=255, null=True)),
            ],
            options={
                "db_table": "user_email",
                "managed": False,
            },
        ),
        migrations.CreateModel(
            name="Zone",
            fields=[
                ("id", models.IntegerField(primary_key=True, serialize=False)),
                ("name", models.CharField(blank=True, max_length=255, null=True)),
            ],
            options={
                "db_table": "zone",
                "managed": False,
            },
        ),
        migrations.DeleteModel(
            name="Addresses",
        ),
        migrations.DeleteModel(
            name="Answers",
        ),
        migrations.DeleteModel(
            name="Children",
        ),
        migrations.DeleteModel(
            name="ChildrenState",
        ),
        migrations.DeleteModel(
            name="Cribrooms",
        ),
        migrations.DeleteModel(
            name="Departments",
        ),
        migrations.DeleteModel(
            name="Desinfections",
        ),
        migrations.DeleteModel(
            name="Districts",
        ),
        migrations.DeleteModel(
            name="Forms",
        ),
        migrations.DeleteModel(
            name="Genders",
        ),
        migrations.DeleteModel(
            name="GuardianPhones",
        ),
        migrations.DeleteModel(
            name="Guardians",
        ),
        migrations.DeleteModel(
            name="Localities",
        ),
        migrations.DeleteModel(
            name="Options",
        ),
        migrations.DeleteModel(
            name="Padrones",
        ),
        migrations.DeleteModel(
            name="Paynote",
        ),
        migrations.DeleteModel(
            name="Payouts",
        ),
        migrations.DeleteModel(
            name="Questions",
        ),
        migrations.DeleteModel(
            name="QuestionTypes",
        ),
        migrations.DeleteModel(
            name="Roles",
        ),
        migrations.DeleteModel(
            name="Shifts",
        ),
        migrations.DeleteModel(
            name="UserEmails",
        ),
        migrations.DeleteModel(
            name="Users",
        ),
        migrations.DeleteModel(
            name="Zones",
        ),
    ]
